# zkevm-circuits

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/proverCiScripts/: wakeUpProver.sh
.github/workflows/: ci.yml  draft.yml  integration.yml  lints.yml  select-runner.yml
bus-mapping/: Cargo.toml
bus-mapping/src/: circuit_input_builder.rs  codehash.rs  error.rs  evm.rs  exec_trace.rs  l1_block_operation.rs  lib.rs  mock.rs  operation.rs  rpc.rs  state_db.rs  util.rs
bus-mapping/src/circuit_input_builder/: access.rs  block.rs  call.rs  execution.rs  input_state_ref.rs  tracer_tests.rs  transaction.rs
bus-mapping/src/evm/: opcodes.rs  precompiled.rs
bus-mapping/src/evm/opcodes/: address.rs  balance.rs  call.rs  calldatacopy.rs  calldataload.rs  calldatasize.rs  caller.rs  callop.rs  callvalue.rs  chainid.rs  codecopy.rs  codesize.rs  coinbase.rs  create.rs  dup.rs  error_depth.rs  error_return_data_outofbound.rs  error_write_protection.rs  exp.rs  extcodecopy.rs  extcodehash.rs  extcodesize.rs  gas.rs  gasprice.rs  jump.rs  jumpdest.rs  jumpi.rs  logs.rs  memory_expansion_test.rs  mload.rs  msize.rs  mstore.rs  number.rs  origin.rs  pc.rs  pop.rs  push.rs  return.rs  return_revert.rs  returndatacopy.rs  (+9 more)
bus-mapping/src/operation/: container.rs
circuit-benchmarks/: Cargo.toml  build.rs
circuit-benchmarks/src/: bytecode_circuit.rs  copy_circuit.rs  evm_circuit.rs  evm_circuit_halo2ecc.rs  exp_circuit.rs  keccak_permutation.rs  lib.rs  main.rs  state_circuit.rs  super_circuit.rs  tx_circuit.rs
eth-types/: Cargo.toml
eth-types/src/: bytecode.rs  evm_types.rs  geth_types.rs  kanvas_l1_block.rs  kanvas_params.rs  kroma_l1_block.rs  kroma_params.rs  lib.rs
eth-types/src/evm_types/: gas_utils.rs  memory.rs  opcode_ids.rs  rwc_util.rs  stack.rs  storage.rs
external-tracer/src/: lib.rs
gadgets/: Cargo.toml
gadgets/src/: batched_is_zero.rs  binary_number.rs  comparison.rs  evm_word.rs  less_than.rs  lib.rs
geth-utils/: build.rs  go.mod  go.sum
geth-utils/example/: msize.go  mstore_mload.go  sstore_sload.go
geth-utils/gethutil/: trace.go  util.go
geth-utils/lib/: lib.go
integration-tests/: Cargo.toml  docker-compose.yml  fuzz_run.sh  reproducing_errors.txt  run.sh
integration-tests/contracts/mul/: Mul.sol
integration-tests/src/: fuzzer.rs  integration_test_circuits.rs  lib.rs  mutations.rs  provers.rs  scenario_utils.rs
integration-tests/tests/: circuit_input_builder.rs  circuits.rs  mainnet.rs  rpc.rs
ipc-verifier/: Cargo.toml
ipc-verifier/src/: main.rs
keccak256/: Cargo.toml
keccak256/src/: arith_helpers.rs  keccak_arith.rs  plain.rs
mock/: Cargo.toml
mock/src/: block.rs  lib.rs  test_ctx.rs  transaction.rs
prover/: Cargo.toml
prover/src/: compute_proof.rs
src/zkevm_specs/encoding/: utils.py
testool/src/: abi.rs  main.rs  utils.rs
testool/src/statetest/: executor.rs  json.rs  results.rs  spec.rs  yaml.rs
tests/: test_add_sub.py
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/: bytecode_circuit.rs  copy_circuit.rs  evm_circuit.rs  exp_circuit.rs  full_circuit.rs  keccak_circuit.rs  lib.rs  mpt_circuit.rs  pi_circuit.rs  rlp_circuit.rs  rlp_circuit_fsm.rs  root_circuit.rs  rw_table.rs  state_circuit.rs  stats.rs  super_circuit.rs  table.rs  test_util.rs  tx_circuit.rs  util.rs  witness.rs
zkevm-circuits/src/bytecode_circuit/: bytecode_to_hashblock_unroller.rs  bytecode_unroller.rs  circuit.rs  dev.rs
zkevm-circuits/src/bytecode_circuit/circuit/: to_poseidon_hash.rs
zkevm-circuits/src/evm_circuit/: execution.rs  op_execution.rs  param.rs  step.rs  table.rs  util.rs  witness.rs
zkevm-circuits/src/evm_circuit/execution/: add_sub.rs  addmod.rs  address.rs  balance.rs  base_fee_hook.rs  begin_deposit_tx.rs  begin_tx.rs  bitwise.rs  block_ctx.rs  blockhash.rs  byte.rs  call.rs  calldatacopy.rs  calldataload.rs  calldatasize.rs  caller.rs  callop.rs  callvalue.rs  chainid.rs  codecopy.rs  codesize.rs  comparator.rs  copy_code_to_memory.rs  copy_to_log.rs  create.rs  div.rs  dummy.rs  dup.rs  end_block.rs  end_deposit_tx.rs  end_inner_block.rs  end_tx.rs  error_code_store.rs  error_depth.rs  error_invalid_creation_code.rs  error_invalid_jump.rs  error_invalid_opcode.rs  error_oog_call.rs  error_oog_constant.rs  (+57 more)
zkevm-circuits/src/keccak_circuit/: cell_manager.rs  keccak_bit.rs  keccak_packed_multi.rs  table.rs  test.rs  util.rs
zkevm-circuits/src/rlp_circuit_fsm/: test.rs
zkevm-circuits/src/root_circuit/: aggregation.rs
zkevm-circuits/src/state_circuit/: constraint_builder.rs  lexicographic_ordering.rs  lookups.rs  multiple_precision_integer.rs  random_linear_combination.rs  state.rs  state_tests.rs  test.rs  tests.rs
zkevm-circuits/src/tx_circuit/: sign_verify.rs
zkevm-circuits/src/witness/: block.rs  bytecode.rs  deposit_tx.rs  mpt.rs  rlp_fsm.rs  rw.rs  step.rs  tx.rs
zkevm-circuits/tests/: prover_error.rs
zktrie/: Cargo.toml
zktrie/src/: lib.rs  state.rs
zktrie/src/state/: builder.rs  test.rs  witness.rs
(+34 files in other folders)
