[workspace]
members = [
    "zkevm-circuits",
    "bus-mapping",
    "geth-utils",
    "keccak256",
    "zktrie",
    "gadgets",
    "integration-tests",
    "circuit-benchmarks",
    "eth-types",
    "external-tracer",
    "mock",
    "testool"
]

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
# halo2_proofs = { git = "https://github.com/kroma-network/halo2.git", rev = "9922fbb" }
halo2_proofs = { path = "../halo2/halo2_proofs" }

[patch."https://github.com/kroma-network/halo2wrong"]
maingate = { path = "../halo2wrong/maingate" }

[patch."https://github.com/kroma-network/poseidon-circuit.git"]
poseidon-circuit = { path = "../poseidon-circuit" }

# Definition of benchmarks profile to use.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
debug-assertions = true
overflow-checks = true
rpath = false
lto = "thin"
incremental = true
