[package]
name = "bus-mapping"
version = "0.1.0"
edition = "2021"
authors = ["CPerezz <c.perezbaro@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
eth-types = { path = "../eth-types" }
keccak256 = { path = "../keccak256" }
ethers-core = "0.6"
ethers-providers = "0.6"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.precompiled-adaptor]
git = "https://github.com/scroll-tech/precompiled-adaptor.git"
rev = "927777002cf7d7b0b35d6ace559a18282c766e52"
features = ["legacy"]

[dev-dependencies]
hex = "0.4.3"
mock = { path = "../mock" }
pretty_assertions = "1.0.0"
rand = "0.8"
tokio = { version = "1.13", features = ["macros"] }
url = "2.2.2"
