[package]
name = "circuit-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
ff = "0.11"
halo2_proofs = { git = "https://github.com/junyu0312/halo2.git", rev = "3f6196fed5a61b7f86eb56848b4193d7a7b830d9" }
pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256" }
ark-std = { version = "0.3", features = ["print-trace"] }
zkevm-circuits = { path = "../zkevm-circuits" }
keccak256 = { path = "../keccak256" }
bus-mapping = { path = "../bus-mapping" }
rand_xorshift = "0.3"
rand = "0.8"
itertools = "0.10"
eth-types = { path = "../eth-types" }
halo2-snark-aggregator = { git = 'https://github.com/scroll-tech/halo2-snark-aggregator.git', branch = 'main' }
rand_pcg = "0.3.1"

[features]
default = []
benches = []
