[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]

[dependencies]
ff = "0.11"
halo2_proofs = { git = "https://github.com/junyu0312/halo2.git", rev = "3f6196fed5a61b7f86eb56848b4193d7a7b830d9" }
pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256" }
sha3 = "0.7.2"
eth-types = { path = "../eth-types" }
digest = "0.7.6"

[dev-dependencies]
rand_xorshift = "0.3"
rand = "0.8"
