[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]

[dependencies]
halo2_proofs = { path = "../../halo2/halo2_proofs", default-features = true }
sha3 = "0.7.2"
eth-types = { path = "../eth-types" }
digest = "0.7.6"

[dev-dependencies]
rand_xorshift = "0.3"
rand = "0.8"
