[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
ethers = "0.6"
serde_json = "1.0.66"
serde = {version = "1.0.130", features = ["derive"] }
bus-mapping = { path = "../bus-mapping"}
eth-types = { path = "../eth-types"}
zkevm-circuits = { path = "../zkevm-circuits", features = ["test"] }
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
pretty_assertions = "1.0.0"
log = "0.4.14"
env_logger = "0.9"
halo2_proofs = { git = "https://github.com/junyu0312/halo2.git", rev = "3f6196fed5a61b7f86eb56848b4193d7a7b830d9" }
pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256" }
ff =  "0.11"

[dev-dependencies]
pretty_assertions = "1.0.0"

[features]
default = []
rpc = []
circuit_input_builder = []
circuits = []
